--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,25 @@
-@import "./styles/base.css";
-@import "./styles/colors.css";
-@import "./styles/componenets.css";
-@import "./styles/layout.css";
-@import "./styles/typography.css";
-@import "./styles/themes.css";
-@import "./styles/tokens.css";
-@import "./styles/typography.css";
+/*! Rene v1.0 | http://rene.relate.design */
+
+/*    , __                  
+ *   /|/  \                 
+ *    |___/  _   _  _    _  
+ *    | \   |/  / |/ |  |/  
+ *    |  \_/|__/  |  |_/|__/                                              
+ */
+
+/* External Libraries */
+@import './styles/normalize.css';
+
+/* Rene */
+@import './styles/base.css';
+@import './styles/tokens.css';
+@import './styles/layout.css';
+@import './styles/typography.css';
+@import './styles/colors.css';
+@import './styles/media.css';
+@import './styles/forms.css';
+@import './styles/tables.css';
+@import './styles/borders.css';
+@import './styles/shadow.css';
+@import './styles/opacity.css';
+@import './styles/components.css';
