removed unused files

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
+@import "/node_modules/normalize.css/normalize.css";
 @import "./styles/base.css";
 @import "./styles/colors.css";
-@import "./styles/componenets.css";
+@import "./styles/components.css";
 @import "./styles/layout.css";
 @import "./styles/typography.css";
 @import "./styles/themes.css";
