--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 @import "/node_modules/normalize.css/normalize.css";
 @import "./styles/tokens.css";
-@import "./styles/base.css";
+@import "./styles/reset.css";
+@import "./styles/typography.css";
+@import "./styles/forms.css";
 @import "./styles/colors.css";
-@import "./styles/components.css";
 @import "./styles/layout.css";
-@import "./styles/typography.css";
-@import "./styles/typography.css";
+@import "./styles/media.css";
+@import "./styles/components.css";
