--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -39,6 +39,9 @@ p {
   line-height: 28px;
 }
 
+span {
+  line-height: 160%;
+}
 b,
 strong {
   font-weight: 600;
@@ -57,6 +60,16 @@ code {
   font-size: 14px;
   font-family: "Source Code Pro", monospace;
   line-height: 18px;
+}
+
+a {
+  text-decoration: none;
+}
+
+li {
+  padding-bottom: 2px;
+  padding-top: 2px;
+  line-height: 160%;
 }
 
 .text-center {
