--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import "./styles/tokens.css";
 @import "./styles/reset.css";
+@import "./styles/theme.css";
 @import "./styles/typography.css";
 @import "./styles/colors.css";
 @import "./styles/layout.css";
