--- a/src/styles/borders.css
+++ b/src/styles/borders.css
@@ -1,15 +1,19 @@
 .radius-xs {
-    border-radius: 2px;
-  }
-  
-  .border-bottom {
-    border-bottom-width: 1px;
-    border-bottom-style: solid;
-    border-bottom-color: rgba(0, 0, 0, 0.05);
-  }
-  
-  .border {
-    border-width: 1px;
-    border-style: solid;
-    border-color: rgba(0, 0, 0, 0.05);
-  }
+  border-radius: 2px;
+}
+
+.radius-m {
+  border-radius: 24px;
+}
+
+.border-bottom {
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: rgba(0, 0, 0, 0.05);
+}
+
+.border {
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgba(0, 0, 0, 0.05);
+}
