--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -3,7 +3,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  color: #000000;
+  color: var(--primaryForeground);
+  background-color: var(--primaryBackground);
   font-family: "Inter", sans-serif;
   font-weight: 300;
 }
@@ -80,10 +81,6 @@ footer {
 
 .padding-xl {
   padding: 40px;
-}
-
-.padding-right-s {
-  padding-right: 8px;
 }
 
 .gap-xs {
