--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,11 +1,10 @@
 body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  background-color: var(--primaryBackground);
-  color: var(--primaryForeground);
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+  background-color: var(--color-primary-background);
+  color: var(--color-primary-foreground);
+  font-family: var(--font-primary);
+  width: 100%;
+	max-width: 100%;
+  font-size: 1.25rem;
 }
 
 header {
@@ -163,6 +162,9 @@ footer {
 
 @media (max-width: 768px) {
   .box-s {
+    width: 100%;
+  }
+  .box {
     width: 100%;
   }
 }
