--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -1,28 +1,8 @@
 html {
-	/* initial document font size of 16px */
-	/* all later rem values are based on this */
-	/* 1rem = 16px */
-    font-size: 100%;
+  font-size: 1.25rem;
+  font-family: var(--font-primary);
 }
 
-	/* target narrow screens and windows */
-	@media (max-width: 480px) {
-		html {
-			/* reduce base font size to 14px */
-			/* which reduces 1rem to 14px */
-			font-size: 87.5%;
-		}
-	}
-
-	/* target very narrow screens and windows */
-	@media (max-width: 320px) {
-		html {
-			/* reduce base font size to 12px */
-			/* which reduces 1rem to 12px */
-			font-size: 75%;
-		}
-	}
-  
 h1 {
   font-size: 96px;
   line-height: 100%;
@@ -51,17 +31,19 @@ h5 {
 }
 
 h6 {
+  font-size: 18px;
+  margin-top: 16px;
+  line-height: 144%;
+
 }
 
-p {
+p,
+span {
   margin-top: 8px;
   margin-bottom: 4px;
   line-height: 28px;
 }
 
-span {
-  line-height: 160%;
-}
 b,
 strong {
   font-weight: 600;
@@ -69,10 +51,7 @@ strong {
 
 blockquote {
   padding: 16px;
-  background-color: #f4f4f4;
-  margin-left: 0px;
-  border-radius: 2px;
-  line-height: 30px;
+  border: 1px solid var(--color-primary-foreground);
 }
 
 code {
@@ -111,20 +90,28 @@ li {
   line-height: 18px;
 }
 
-@media (max-width: 480px) {
-  h1 {
-    font-size: 96px;
+@media (max-width: 768px) {
+  html {
+    font-size: 1.125rem;
   }
 
+  h1 {
+    font-size: 64px;
+  }
   h2 {
     font-size: 48px;
   }
-
   h3 {
-    font-size: 42px;
+    font-size: 36px;
+  }
+  h4 {
+    font-size: 24px;
+  }
+  h5 {
+    font-size: 18px;
+  }
+  h6 {
+    font-size: 14px;
   }
 
-  h4 {
-    font-size: 32px;
-  }
 }
