--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,3 +1,6 @@
+/*
+  1. Use a more-intuitive box-sizing model.
+*/
 *,
 *::before,
 *::after {
@@ -5,22 +8,34 @@
   color: inherit;
 }
 
+/*
+  2. Remove default margin
+*/
 * {
   margin: 0;
 }
 
+/*
+  3. Allow percentage-based heights in the application
+*/
 html,
 body {
-  min-height: 100%;
+  height: 100%;
 }
 
+/*
+  Typographic tweaks!
+  4. Add accessible line-height
+  5. Improve text rendering
+*/
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
-  margin: 0 auto;
-  overflow-x: hidden;
 }
 
+/*
+  6. Improve media defaults
+*/
 img,
 picture,
 video,
@@ -30,6 +45,9 @@ svg {
   max-width: 100%;
 }
 
+/*
+  7. Remove built-in form typography styles
+*/
 input,
 button,
 textarea,
@@ -37,6 +55,9 @@ select {
   font: inherit;
 }
 
+/*
+  8. Avoid text overflows
+*/
 p,
 h1,
 h2,
@@ -48,6 +69,9 @@ h6 {
   font: inherit;
 }
 
+/*
+  9. Create a root stacking context
+*/
 #root,
 #__next {
   isolation: isolate;
