--- a/src/styles/tokens.css
+++ b/src/styles/tokens.css
@@ -1,25 +1,30 @@
 :root {
   --size-base: 4px;
-  --font-primary:"HelveticaNeue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  --font-primary: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 
 }
 
-html, [data-theme="light"]  {
+html,
+[data-theme="light"] {
   --color-primary: #0000ff;
   --color-secondary: #8800ff;
   --color-primary-background: #ffffff;
-  --color-secondary-background: #f3f3f3;
-  --color-primary-foreground: #000000;
-  --color-secondary-foreground: #0b0b0b;
-  --color-warning: hsl(0, 100%, 63%);
+  --color-secondary-background: #eeeeee;
+  --color-primary-foreground: #111111;
+  --color-secondary-foreground: #222222;
+  --color-positive: green;
+  --color-critical: orange;
+  --color-negative: red;
 }
 
 [data-theme="dark"] {
   --color-primary: #8080ff;
   --color-secondary: #a640ff;
-  --color-primary-background: #000000;
-  --color-secondary-background: #0b0b0b;
+  --color-primary-background: #111111;
+  --color-secondary-background: #222222;
   --color-primary-foreground: #ffffff;
-  --color-secondary-foreground: #f3f3f3;
-  --color-warning: hsl(0, 100%, 63%);
+  --color-secondary-foreground: #eeeeee;
+  --color-positive: green;
+  --color-critical: orange;
+  --color-negative: red;
 }
