--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,3 +1,24 @@
+* {
+  scrollbar-width: calc(3px);
+  scrollbar-color: var(--color-primary-background) var(--color-tertiary-background);
+}
+
+*::-webkit-scrollbar {
+  width: 3px;
+  height: 3px;
+}
+
+*::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.1);
+  background-color: var(--color-primary-background);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 3px;
+  background-color: var(--color-tertiary-background);
+}
+
 body {
   background-color: var(--color-primary-background);
   color: var(--color-primary-foreground);
