--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -6,11 +6,13 @@ html {
 h1 {
   font-size: 96px;
   line-height: 100%;
+  letter-spacing: -1.5px;
 }
 
 h2 {
   font-size: 64px;
-  line-height: 120%;
+  line-height: 110%;
+  letter-spacing: -1.5px;
 }
 
 h3 {
@@ -20,7 +22,7 @@ h3 {
 
 h4 {
   font-size: 36px;
-  line-height: 136%;
+  line-height: 124%;
 }
 
 h5 {
