--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -6,13 +6,11 @@ html {
 h1 {
   font-size: 96px;
   line-height: 100%;
-  letter-spacing: -1.5px;
 }
 
 h2 {
   font-size: 64px;
   line-height: 110%;
-  letter-spacing: -1.5px;
 }
 
 h3 {
@@ -57,6 +55,7 @@ code {
   font-size: 16px;
   font-family: "Source Code Pro", monospace;
   line-height: 20px;
+  white-space: pre-wrap;
 }
 
 a {
