--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,4 @@
 @import "./styles/shadows.css";
 @import "./styles/borders.css";
 @import "./styles/components.css";
+@import "https://use.typekit.net/kxo4uot.css";
