--- a/src/styles/tokens.css
+++ b/src/styles/tokens.css
@@ -1,6 +1,6 @@
 :root {
   --size-base: 4px;
-  font-family: "HelveticaNeue-light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-family: "neue-haas-grotesk-display", "HelveticaNeue-light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 
 html,
