--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -1,5 +1,9 @@
 html {
+  font-family: var(--font-secondary);
   font-size: 1.25rem;
+}
+
+h1, h2, h3, h4, h5, h6 {
   font-family: var(--font-primary);
 }
 
@@ -10,28 +14,27 @@ h1 {
 
 h2 {
   font-size: 64px;
-  line-height: 110%;
+  line-height: 104%;
 }
 
 h3 {
   font-size: 48px;
-  line-height: 124%;
+  line-height: 104%;
 }
 
 h4 {
   font-size: 36px;
-  line-height: 124%;
+  line-height: 104%;
 }
 
 h5 {
   font-size: 24px;
-  line-height: 140%;
+  line-height: 104%;
 }
 
 h6 {
   font-size: 18px;
-  line-height: 144%;
-
+  line-height: 100%;
 }
 
 p {
