Reduce unused styles

--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap");
 @import url("https://use.typekit.net/kxo4uot.css");
-@import "./styles/reset.css";
-@import "./styles/tokens.css";
-@import "./styles/typography.css";
-@import "./styles/colors.css";
-@import "./styles/layout.css";
-@import "./styles/media.css";
-@import "./styles/forms.css";
-@import "./styles/shadows.css";
-@import "./styles/borders.css";
-@import "./styles/components.css";
+@import "./reset.css";
+@import "./tokens.css";
+@import "./typography.css";
+@import "./colors.css";
+@import "./layout.css";
+@import "./media.css";
+@import "./shadows.css";
+@import "./borders.css";
