--- a/src/typography.css
+++ b/src/typography.css
@@ -35,11 +35,13 @@ h4 {
 h5 {
     font-size: 1.32rem; /* 1.5rem * 0.88 */
     line-height: 1.16;
+    letter-spacing: 0.01rem;
 }
 
 h6 {
     font-size: 0.99rem; /* 1.125rem * 0.88 */
     line-height: 1.12;
+    letter-spacing: 0.01rem;
 }
 
 p {
@@ -62,6 +64,7 @@ code {
     font-size: 0.75rem;
     font-family: "Source Code Pro", monospace;
     line-height: 1.25;
+    overflow: auto;
 }
 
 a {
