Update default font to Helvetica Neue

--- a/src/tokens.css
+++ b/src/tokens.css
@@ -1,7 +1,6 @@
 :root {
     --size-base: 4px;
-    --font-primary: "neue-haas-grotesk-display";
-    --font-secondary: "HelveticaNeue-light", "Helvetica Neue Light",
+    --font-primary: "HelveticaNeue-light", "Helvetica Neue Light",
         "Helvetica Neue", Helvetica, "inter", Arial, "Lucida Grande", sans-serif;
     --base-font-size: 1.25rem;
 }
